--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div id="aux-keys">
                     <button type="button" id="key-ac" class="button">AC</button>
                     <button type="button" id="key-plus-minus" class="button">±</button>
-                    <button type="button" ud="key-power" class="button">x<sup>y</sup></button>
+                    <button type="button" id="key-power" class="button">x<sup>y</sup></button>
                 </div>
                 <div id="num-keys">
                     <div class="row">
@@ -59,5 +59,6 @@
         </div>
 
     </div>
+    <script src="javascript/calculator.js"></script>
 </body>
 </html>
