Numbers display on screen - Added functionality to add numbers and operstors to display - Operators broke when another bug fixed - Numbers add to array item instead of as new items

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>BASIC CALCULATOR</h1>
     <div id="calculator-body">
         <div id="display">
-            <p id="display-characters">8008135</p>
+            <p id="display-calculation"></p>
         </div>
         <div id="button-pad">
         <!--
@@ -25,7 +25,7 @@
                 <div id="aux-keys">
                     <button type="button" id="key-ac" class="button">AC</button>
                     <button type="button" id="key-plus-minus" class="button">±</button>
-                    <button type="button" id="key-power" class="button">x<sup>y</sup></button>
+                    <button type="button" id="key-power" class="button">^</button>
                 </div>
                 <div id="num-keys">
                     <div class="row">
@@ -59,6 +59,7 @@
         </div>
 
     </div>
+    <script src="javascript/buttonValues.js"></script>
     <script src="javascript/calculator.js"></script>
 </body>
 </html>
